Fixed mobile layout issues.

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -65,6 +65,7 @@
   top: 0;
   left: 0;
   padding: 15px 20px;
+  gap: 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -77,7 +78,7 @@
 }
 
 .title {
-  font-size: 30px;
+  font-size: 20px;
   font-style: italic;
   font-weight: 400;
   line-height: 1;
@@ -90,13 +91,29 @@
   }
 
   @include respond-to('xsmall') {
-    font-size: 40px;
+    font-size: 30px;
   }
 
   @include respond-to('small') {
     white-space: nowrap;
     font-size: 50px;
   }
+}
+
+.subtext {
+  font-size: 13px;
+
+  @include respond-to('xsmall') {
+    font-size: 16px;
+  }
+
+  @include respond-to('medium') {
+    font-size: 20px;
+  }
+}
+
+.date {
+  opacity: 0.5;
 }
 
 .main_container {
@@ -117,14 +134,20 @@
   justify-content: flex-start;
   align-items: flex-end;
   height: 100%;
+  text-align: right;
+  flex: 1;
 }
 
 .logo {
   transition: height 0.2s ease-in-out;
-  height: 80px;
+  height: 50px;
   aspect-ratio: 164 / 101;
   margin-bottom: 5px;
   background-color: $background;
+
+  @include respond-to('xsmall') {
+    height: 80px;
+  }
 }
 
 .link {
